--- a/Widget.html
+++ b/Widget.html
@@ -21,7 +21,7 @@
     <label>Imagery</label>
   </div>
   <div id="communitySelector"></div>
-  <div class="feedbackTitle">Add Feedback</div>
+  <!--div class="feedbackTitle">Add Feedback</div-->
   <br />
   <div id="editorDiv" data-dojo-attach-point="editDiv" style="width:100%; height:200px">
   </div>
