--- a/Widget.html
+++ b/Widget.html
@@ -32,4 +32,5 @@
   <br />
   <div id="conversationDiv"></div>
   <input type="button" id="submitConversation" value="Submit" data-dojo-attach-event="click:submitConversation" style="display: none" />
+  <div id="legendDiv"></div>
 </div>
