made many small edits

--- a/Widget.html
+++ b/Widget.html
@@ -23,12 +23,12 @@
   <div id="provideFeedbackDiv">
     <div class="widgetTitle">${nls.provideFeedback}</div>
     <br />
-    <div id="editorDiv" data-dojo-attach-point="editDiv" style="width:100%; height:199px"></div>
+    <div id="editorContainer"></div>
     <br />
   </div>
   <div id="viewAllFeedback" style="display: none" data-dojo-attach-point="agreeChkNode" data-dojo-type="jimu/dijit/CheckBox" data-dojo-attach-event="click:toggleAllFeedback">&nbsp;&nbsp;${nls.toggleAllFeedback}</div>
   <br />
   <div id="toggleAttribute" style="display: none" data-dojo-attach-point="ChkNode1" data-dojo-type="jimu/dijit/CheckBox" data-dojo-attach-event="click:toggleAttribute">&nbsp;&nbsp;${nls.toggleAttribute}</div>
   <hr class="greyHR narrowHR spacedHR">
-  <div id="legendDiv"></div>
+  <div id="legendContainer"></div>
 </div>
