--- a/Widget.html
+++ b/Widget.html
@@ -19,6 +19,7 @@
   <div class="widgetTitle">${nls.selectCommunity}</div>
   <br />
   <div id="communitySelectorDiv" class="widgetContent"></div>
+  <!-- <div class="jimu-btn signInButton">${nls.login.signIn}<div> -->
   <div class="signedIn">
     <hr class="greyHR narrowHR spacedHR">
     <div id="provideFeedbackDiv">
