fixed default contributor assignment and added loading icons

--- a/Widget.html
+++ b/Widget.html
@@ -2,11 +2,11 @@
   <div id="logoPanel" class="center">
     <img data-dojo-attach-point="logoNode"><br />
   </div>
-  <div id="groupInvitePanel" class="invitePanel">
+  <!-- <div id="groupInvitePanel" class="invitePanel">
     <p><span id="userId"></span><span id="userMessage">${nls.gfxGroupInvite}</span></p>
     <input id="acceptInvite" type="button" value="Accept" data-dojo-attach-event="click:acceptInvite" />
     <input id="declineInvite" type="button" value="Decline" data-dojo-attach-event="click:declineInvite" />
-  </div>
+  </div> -->
   <div id="imageryControl" class="widgetContent">
     <div class="widgetTitle">${nls.sliderLabel}</div>
     <br />
